go-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/courses"
        backend:
          service:
            name: go-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/home"
        backend:
          service:
            name: go-svc
            port:
              number: 80
